// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyRow renders correctly 1`] = `
<div
  className="panel panel--default property-row"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-status property-status--on-track"
  >
    ON TRACK
  </div>
</div>
`;

exports[`PropertyRow renders selected 1`] = `
<div
  className="panel panel--default property-row property-row--selection-mode property-row--selected"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-status property-status--on-track"
  >
    ON TRACK
  </div>
</div>
`;

exports[`PropertyRow renders selection mode 1`] = `
<div
  className="panel panel--default property-row property-row--selection-mode"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-status property-status--on-track"
  >
    ON TRACK
  </div>
</div>
`;
